Adds commands to replay