@@ -51,6 +51,8 @@ public class PlayerRecorder {
     // Modifier State for current tick in replay
     public static final Queue<String> pressedModifiers = new ConcurrentLinkedDeque<>();
 
+    public static final Queue<String> lastCommandUsed = new ConcurrentLinkedDeque<>();
+
     public static void registerInputRecorder() {
         // Register Task-Queues
         tasks.register("playerActions");
@@ -88,7 +90,8 @@ public class PlayerRecorder {
                 new LookingDirection(client.player.getYaw(), client.player.getPitch()),
                 client.player.getInventory().selectedSlot,
                 lastSlotClicked.poll(),
-                client.currentScreen == null ? null : client.currentScreen.getClass()
+                client.currentScreen == null ? null : client.currentScreen.getClass(),
+                lastCommandUsed.poll()
             );
             record.add(newEntry);
         });
@@ -107,6 +110,7 @@ public class PlayerRecorder {
 
         ClientHelpers.centerPlayer();
         lastSlotClicked.clear();
+        lastCommandUsed.clear();
         state = RECORDING;
     }
 
@@ -153,7 +157,7 @@ public class PlayerRecorder {
                                 && PlayerAutomaOptionsScreen.useRelativeLookingDirectionOption.getValue();
 
         // Get first RecordEntry Looking direction to calculate difference
-        LookingDirection l = record.entries.get(0).lookingDirection();
+        LookingDirection l = record.entries.getFirst().lookingDirection();
         float pitchDiff = isRelative ? l.pitch() - client.player.getPitch() : 0;
         float yawDiff = isRelative ? l.yaw() - client.player.getYaw() : 0;
 
@@ -165,6 +169,7 @@ public class PlayerRecorder {
             int selectedSlot = entry.slotSelection();
             SlotClick clickedSlot = entry.slotClicked();
             Class<?> currentScreen = entry.currentScreen();
+            String command = entry.command();
 
             // Replay Ticks
             tasks.add(() -> {
@@ -223,6 +228,8 @@ public class PlayerRecorder {
                 // Click Slot in inventory if possible
                 if (clickedSlot != null && PlayerAutomaOptionsScreen.recordInventoryActivitiesOption.getValue()) ClientHelpers.clickSlot(clickedSlot);
 
+                // Execute command if possible
+                if (command != null) Objects.requireNonNull(client.getNetworkHandler()).sendChatCommand(command);
             });
         }
 
@@ -333,7 +340,7 @@ public class PlayerRecorder {
             e.printStackTrace();
             try {
                 if (objectOutputStream != null) objectOutputStream.close();
-                LOGGER.info("Deletion of failed file: " + selected.delete());
+                LOGGER.info("Deletion of failed file: {}", selected.delete());
             } catch (IOException closeFailed) {
                 closeFailed.printStackTrace();
                 LOGGER.warn("Error closing file in error handling!"); // This should not happen :(
